# yars

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: scrape.yml
dashboard/: package-lock.json  package.json
dashboard/public/data/: dashboard_data.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/analyze/: route.ts
dashboard/src/app/api/trigger-scrape/: route.ts
dashboard/src/components/dashboard/: AiInsightsPanel.tsx  BuzzBoard.tsx  DashboardHeader.tsx  DiscussionDigest.tsx  EngagementScatter.tsx  OverlookedSignals.tsx  RawMessages.tsx  SentimentDonut.tsx  SubredditRadar.tsx  SubredditTickerChart.tsx  TickerBarChart.tsx  TickerDetailSection.tsx  TickerHeatmap.tsx  TickerSummary.tsx  TimelineArea.tsx  TopPostsTable.tsx
dashboard/src/lib/: data.ts  types.ts
example/: finance_scraper.py
src/: osint.py  pyproject.toml
src/yars/: agents.py  utils.py  yars.py
