[project]
name = "yars"
version = "0.1.0"
description = "YARS (Yet Another Reddit Scraper) - scrape Reddit posts, comments, and user data via the public JSON API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "meta-ai-api>=1.2.1",
    "pygments>=2.18.0",
    "requests>=2.32.3",
]
